# python-para-todos

./: .buildinfo  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.html  README.md  exercicios.html  genindex.html  instalacao-python.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/: pull_request_template.md
01-instalacao-python/: 01-intro.html  02-windows.html  03-linux.html  04-versoes-python.html
02-ambientes/: 01-intro.html  02-ides.html  03-anaconda.html
03-vscode/: 01-instalacao-windows.html  02-configuracao.html
04-primeiros-passos/: 01-intro.html  02-ola-mundo.html  03-execucao.html
05-operacoes-basicas/: 01-matematica.html  02-tipos-numericos.html  03-precedencia-operadores.html  04-variaveis.html
06-conceitos-basicos/: 01-variaveis.html
06-estruturas-de-dados/: 01-strings.html  02-listas.html  03-tuplas.html  04-dicionarios.html  05-conjuntos.html  05-sets.html
07-fluxo-controle/: 01-condicionais.html  02-repeticao.html
08-funcoes/: 01-introducao.html
09-modulos/: 01-introducao.html  02-modulos-nativos.html  03-modulos-proprios.html  04-modulos-terceiros.html
10-orientacao-objetos/: 01-introducao.html  02-atributo-classe.html  03-heranca.html  04-encapsulamento.html  05-polimorfismo.html
_sources/: README.md  exercicios.ipynb  instalacao-python.md  intro.md
_static/: documentation_options.js
ambientes/: ides.html  intro.html
book/: README.md  _config.yml  _toc.yml  exercicios.ipynb  instalacao-python.md  intro.md
(+138 files in other folders)
